Fix jdk8 incompatibility